--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "next": "11.1.0",
@@ -18,3 +19,4 @@
     "eslint-config-next": "11.1.0"
   }
 }
+ 
